--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - A Pen by S1lench</title>
+  <title>S1lench Prodaction</title>
   <title>BRADENGELHARDT</title>
   <meta name="description" content="Web designer and front-end developer">
+  <link rel=”icon” href=”/favico.ico” type=”image/x-icon”>
   <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,400,600' rel='stylesheet' type='text/css'>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.7.4/jquery.fullPage.min.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -109,7 +110,7 @@
         <div class="slide">
           <h1>PYTHON</h1>
           <p>Education</p>
-          <img data-src="https://i.postimg.cc/jdbQj6yb/image.png">
+          <img data-src="https://i.postimg.cc/hGm9wDf1/image.png">
         
         </div>
       </div>
